Special thunks for math functions should work on ARMv7 https://bugs.webkit.org/show_bug.cgi?id=115144

Reviewed by Gavin Barraclough and Oliver Hunt.

The only hard bit here was ensuring that we implemented the very special
"cheap C call" convention on ARMv7.

* assembler/AbstractMacroAssembler.h:
(JSC::isARMv7s):
(JSC):
(JSC::isX86):
* dfg/DFGCommon.h:
* jit/SpecializedThunkJIT.h:
(SpecializedThunkJIT):
(JSC::SpecializedThunkJIT::callDoubleToDoublePreservingReturn):
* jit/ThunkGenerators.cpp:
(JSC::floorThunkGenerator):
(JSC::ceilThunkGenerator):
(JSC::roundThunkGenerator):
(JSC::expThunkGenerator):
(JSC::logThunkGenerator):



Canonical link: https://commits.webkit.org/133580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149082 268f45cc-cd09-0410-ab3c-d52691b4dbfc